[workspace]
members = ["meme_generator_contrib"]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MemeCrafters/meme-generator-contrib-rs"
repository = "https://github.com/MemeCrafters/meme-generator-contrib-rs"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
