[package]
name = "meme_generator_contrib"
description = "Meme generator extra memes"
version = "0.0.1"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MemeCrafters/meme-generator-contrib-rs"
repository = "https://github.com/MemeCrafters/meme-generator-contrib-rs"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
inventory = "0.3"
serde = "1.0"
skia-safe = { version = "0.80", features = ["textlayout"] }

meme_generator_core = "0.0.4"
meme_generator_utils = "0.0.7"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
